Remove emoji from feature request template title
Signed-off-by: Lamparter <notlamparter@outlook.com>

--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: ✨ Feature Request
+name: Feature Request
 description: Request a new feature to make things better!
 labels: [feature request]
 body:
