Tweak `bug_report.yml`
Signed-off-by: Lamparter <notlamparter@outlook.com>

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: Create a bug report to help improve!
 labels: [bug]
-title: Bug
+title: "Bug: "
 type: Bug
 body:
   - type: markdown
