--- a/.github/ISSUE_TEMPLATE/spec.yml
+++ b/.github/ISSUE_TEMPLATE/spec.yml
@@ -2,6 +2,8 @@ name: Spec
 description: An official specification for enhancements.
 labels: ["enhancement"]
 assignees: []
+title: "Spec: "
+type: Spec
 body:
   - type: markdown
     attributes:
