--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 blank_issues_enabled: false
 # contact_links:
-#  - name: 💬 Discord
+#  - name: Discord
 #    url: https://discord.com/invite/Z74UAQ5vPR
 #    about: You can discuss products and services on Discord, too!
 #  - name: 📧 Support
