Remove "the emoji"
Signed-off-by: Lamparter <notlamparter@outlook.com>

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,6 @@ blank_issues_enabled: false
 #  - name: Discord
 #    url: https://discord.com/invite/Z74UAQ5vPR
 #    about: You can discuss products and services on Discord, too!
-#  - name: 📧 Support
+#  - name: Support
 #    url: mailto:support@theriversi.de
 #    about: Errors relating to your account? Drop us an email!
