Code Quality: Make meta more modern™ (#8)

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,7 +1,8 @@
-name: 🐛 Bug Report
+name: Bug Report
 description: Create a bug report to help improve!
 labels: [bug]
-title: "🐛 "
+title: "Bug: "
+type: Bug
 body:
   - type: markdown
     attributes:
