Add Developer Sanctuary discord link
Signed-off-by: Lamparter <notlamparter@outlook.com>

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
  - name: Discord
-   url: https://dsc.gg/ivirius
+   url: https://dsc.gg/devsanx
    about: You can discuss products and services on Discord, too!
 #  - name: Support
 #    url: mailto:support@theriversi.de
